--- a/app/views/layouts/_head.haml
+++ b/app/views/layouts/_head.haml
@@ -23,3 +23,6 @@
 
   -# A tag for google webmaster site verification
   %meta{ name: "google-site-verification", content: "JUqB3tYmezYEJNAkw8MUdmIocAGztY85eaoNKBD5j0Q"}
+  = stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.0.1/css/font-awesome-ie7.min.css'
+  = stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.0.1/css/font-awesome.css'
+  = stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.0.1/css/font-awesome.min.css'
