--- a/app/views/homepage/_grid_item.haml
+++ b/app/views/homepage/_grid_item.haml
@@ -15,6 +15,19 @@
         - if(!show_distance || distance.blank?)
           = link_to(person_path(username: listing.author.username), :class => "home-fluid-thumbnail-grid-author-name", title: name) do
             = name
+            
+            - if @current_user.present?
+              -if(@current_user.is_admin == 1)
+                - check = !is_featured(listing.id)
+                - check ? act = "on" : act = "off"
+                = link_to change_featured_status_person_listing_path(@current_user,listing.id ),data: { method: :post, remote: true, params: { act: act }.to_param } , id: "b_f_#{listing.id}" , class: "ujs" do
+                  - if check
+                    %button.btn-un.validate.f_b{id: "b_#{listing.id}"}
+                      Featured
+                  -else
+                    %button.btn-un.validate.un_f_b{id: "b_#{listing.id}"}
+                      Un Featured
+
         - else
           .home-fluid-thumbnail-grid-details
             = link_to(person_path(username: listing.author.username), class: "home-fluid-thumbnail-grid-details-author-name", title: name) do
