--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -1,8 +1,8 @@
 -# Hide header in map view if mobile
 %header.header
   .header-wrapper
-    .header-right.header-padding.visible-tablet
-      = link_to t("homepage.index.post_new_listing"), new_listing_path, :class => "new-listing-link", :id => "new-listing-link"
+    .header-right
+      = link_to t("homepage.index.post_new_listing"), new_listing_path, :id => "new-listing-link" , :class => "new-listing-link"
 
     .header-right.visible-tablet
       #header-menu-desktop-anchor.header-menu-container.toggle.hidden{data: {toggle: '#header-menu-toggle-menu', 'toggle-position' => 'absolute'}}
@@ -57,3 +57,91 @@
         - else
           %span.header-wide-logo-text.visible-tablet
             = @current_community.name(I18n.locale)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/ -# Hide header in map view if mobile
+/ %header.header
+/   .header-wrapper
+/     .header-right
+/       = link_to t("homepage.index.post_new_listing"), new_listing_path, :id => "new-listing-link" #, :class => "new-listing-link"
+
+/     .header-right.visible-tablet
+/       #header-menu-desktop-anchor.header-menu-container.toggle.hidden{data: {toggle: '#header-menu-toggle-menu', 'toggle-position' => 'absolute'}}
+
+/     - if logged_in
+/       = render :partial => "layouts/header_anchors", locals: {avatar_url: avatar_url, current_user_name: current_user_name, icons: icons}
+/       = render :partial => "layouts/header_user_menu", locals: {unread_count: unread_count, inbox_path: inbox_path, profile_path: profile_path, manage_listings_path: manage_listings_path, settings_path: settings_path, logout_path: logout_path, icons: icons}
+
+/       = render :partial => "layouts/header_right_visible_tablet", locals: {unread_count: unread_count, inbox_path: inbox_path, icons: icons}
+
+/     - if available_locales.size > 1
+/       .header-right.visible-desktop
+/         #header-locales-menu.toggle.header-hover{data: {toggle: '#header-locales-toggle-menu', 'toggle-position' => 'absolute'}}
+/           %span.header-text-link
+/             = current_locale_name
+/             = icon_map_tag(icons, "dropdown", ["icon-dropdown"])
+/         #header-locales-toggle-menu.toggle-menu.header-toggle-menu-language.hidden
+/           = render :partial => "layouts/locale_select", :collection => available_locales, :as => :loc_array, locals: {return_after_locale_change: return_after_locale_change}
+
+/     - unless logged_in
+/       Hi &nbsp&nbsp
+/       = link_to login_path, class: "", id: "header-login-link" do
+/         = t("header.login")
+/       = link_to sign_up_path, class: "" do
+/         = t("header.signup")
+
+
+/     .header-left.hidden-tablet
+/       .header-menu-container.toggle.hidden{data: {toggle: '#header-menu-toggle-menu', 'toggle-position' => 'absolute'}}
+/         #header-menu-mobile-anchor
+/           = icon_map_tag(icons, "rows", ["header-menu-icon"])
+/           %span
+/             = t("header.menu")
+
+/     = render :partial => "layouts/header_menu", locals: { return_after_locale_change: return_after_locale_change, available_locales: available_locales, icons: icons}
+
+/     / -#
+/     /   If necessary, the buttons will overlap with the logo. Buttons should be on top, that's
+/     /   keep the logo here after buttons
+/     / .header-left.header-logo-container
+/     /   = link_to landing_page_path, :class => "header-logo", :id => "header-logo" do
+/     /     - if @current_community.logo.present?
+/     /       %i.header-square-logo.hidden-tablet
+/     /         -# Logo is here, it's a CSS background
+/     /     - else
+/     /       %span.header-square-logo-text.hidden-tablet
+/     /         = @current_community.name(I18n.locale)[0]
+/     /     - if @current_community.wide_logo.present?
+/     /       %i.header-wide-logo.visible-tablet
+/     /         -# Logo is here, it's a CSS background
+/     /     - else
+/     /       %span.header-wide-logo-text.visible-tablet
+/     /         = @current_community.name(I18n.locale)
+
+
+
