--- a/app/views/listings/_delivery_opts.haml
+++ b/app/views/listings/_delivery_opts.haml
@@ -1,30 +1,32 @@
 - if delivery_opts.present?
   - if is_author
-    .row
-      .col-12
-        .delivery-title= t("listings.show.delivery")
-        %ul
+    .row.icon-with-text-container.row
+      .col-md-1.col-sm-1.col-xs-1.padding-right-0
+        %i.icon-shopping-cart
+      .col-md-3.col-sm-3.col-xs-3.padding-0
+        .text-title-de= t("listings.show.delivery")
+      .col-md-6.col-sm-6.col-xs-6
+        %ul.delivery_opts-list
           - delivery_opts.each do |opts|
             %li=opts[:price_info]
 
   - else
-    .row
-      .col-12
-        .delivery-title= t("listings.show.delivery")
-    - if delivery_opts.count == 1
-      .row
-        .col-12
-          %span.shipping-options-label
-            = t("listings.show.#{delivery_opts.first[:name]}_no_price")
-            - if (delivery_opts.first[:name] == :shipping)
-              - price_tag = "<span class=\"delivery-price-value\" data-shipping-price=\"#{delivery_opts.first[:price].cents}\" data-per-additional=\"#{Maybe(delivery_opts).first[:shipping_price_additional].cents.or_else(0)}\">#{humanized_money(delivery_opts.first[:price])}</span>"
-              - symbol = delivery_opts.first[:price].currency.symbol
-              - price_tag_with_currency = delivery_opts.first[:price].currency.symbol_first ? "(+#{symbol}#{price_tag})" : "(+#{price_tag} #{symbol})"
-              = price_tag_with_currency.html_safe
-    - else
-      - delivery_opts.each do |opts|
-        .row
-          .col-12
+    .col-md-1.col-sm-1.col-xs-1.padding-right-0
+      %i.fa.fa-shopping-cart{"aria-hidden" => "true"}
+    .col-md-3.col-sm-3.col-xs-3.padding-0
+      .delivery-title= t("listings.show.delivery")
+    .col-md-4.col-sm-4.col-xs-4.padding-right-0
+      - if delivery_opts.count == 1
+        %span.shipping-options-label
+          = t("listings.show.#{delivery_opts.first[:name]}_no_price")
+          - if (delivery_opts.first[:name] == :shipping)
+            - price_tag = "<span class=\"delivery-price-value\" data-shipping-price=\"#{delivery_opts.first[:price].cents}\" data-per-additional=\"#{Maybe(delivery_opts).first[:shipping_price_additional].cents.or_else(0)}\">#{humanized_money(delivery_opts.first[:price])}</span>"
+            - symbol = delivery_opts.first[:price].currency.symbol
+            - price_tag_with_currency = delivery_opts.first[:price].currency.symbol_first ? "(+#{symbol}#{price_tag})" : "(+#{price_tag} #{symbol})"
+            = price_tag_with_currency.html_safe
+      - else
+        - delivery_opts.each do |opts|
+          .row
             = radio_button_tag(:delivery, opts[:name], opts[:default])
             = label_tag("delivery_#{opts[:name]}", class: "delivery-label shipping-options-label") do
               = t("listings.show.#{opts[:name]}_no_price")
@@ -33,3 +35,48 @@
                 - symbol = opts[:price].currency.symbol
                 - price_tag_with_currency = opts[:price].currency.symbol_first ? "(+#{symbol}#{price_tag})" : "(+#{price_tag} #{symbol})"
                 = price_tag_with_currency.html_safe
+    .col-md-4.col-sm-4.col-xs-4.padding-0
+      %button.book-button.btn
+        = action_button_label(@listing)
+      %span
+        %i.icon-question
+          %a{:href => "#{new_person_person_message_path(@listing.author)}"}Ask a Question
+
+/ - if delivery_opts.present?
+/   - if is_author
+/     .row.icon-with-text-container.row
+/       .col-md-1.col-sm-1.col-xs-1
+/         %i.fa.fa-shopping-cart{"aria-hidden" => "true"}
+/       .col-md-4
+/         .text-title-de= t("listings.show.delivery")
+/       .col-md-7
+/         %ul.delivery_opts-list
+/           - delivery_opts.each do |opts|
+/             %li=opts[:price_info]
+
+/   - else
+/     .row
+/       .col-md-7
+/         .delivery-title= t("listings.show.delivery")
+/     - if delivery_opts.count == 1
+/       .row
+/         .col-12
+/           %span.shipping-options-label
+/             = t("listings.show.#{delivery_opts.first[:name]}_no_price")
+/             - if (delivery_opts.first[:name] == :shipping)
+/               - price_tag = "<span class=\"delivery-price-value\" data-shipping-price=\"#{delivery_opts.first[:price].cents}\" data-per-additional=\"#{Maybe(delivery_opts).first[:shipping_price_additional].cents.or_else(0)}\">#{humanized_money(delivery_opts.first[:price])}</span>"
+/               - symbol = delivery_opts.first[:price].currency.symbol
+/               - price_tag_with_currency = delivery_opts.first[:price].currency.symbol_first ? "(+#{symbol}#{price_tag})" : "(+#{price_tag} #{symbol})"
+/               = price_tag_with_currency.html_safe
+/     - else
+/       - delivery_opts.each do |opts|
+/         .row
+/           .col-12
+/             = radio_button_tag(:delivery, opts[:name], opts[:default])
+/             = label_tag("delivery_#{opts[:name]}", class: "delivery-label shipping-options-label") do
+/               = t("listings.show.#{opts[:name]}_no_price")
+/               - if (opts[:name] == :shipping)
+/                 - price_tag = "<span class=\"delivery-price-value\" data-shipping-price=\"#{opts[:price].cents}\" data-per-additional=\"#{Maybe(opts)[:shipping_price_additional].cents.or_else(0)}\">#{humanized_money(opts[:price])}</span>"
+/                 - symbol = opts[:price].currency.symbol
+/                 - price_tag_with_currency = opts[:price].currency.symbol_first ? "(+#{symbol}#{price_tag})" : "(+#{price_tag} #{symbol})"
+/                 = price_tag_with_currency.html_safe
