--- a/app/views/homepage/index.haml
+++ b/app/views/homepage/index.haml
@@ -57,7 +57,7 @@
     .home-toolbar-button-group{:class => listing_shape_menu_enabled || @category_menu_enabled ? "filters-enabled" : ""}
       - ["grid", "list", "map"].each do |view_type|
         - selected_class = @view_type == view_type ? "selected" : ""
-        = link_to search_path(params.merge(view: view_type)), :class => "home-toolbar-button-group-button #{selected_class}", :title => t("homepage.filters.#{view_type}_button") do
+        = link_to homepage_index_path( params: params.merge(view: => "value",  "#{view_type}") ), :class => "home-toolbar-button-group-button #{selected_class}", :title => t("homepage.filters.#{view_type}_button") do
           = icon_tag(view_type, ["icon-fix", "home-button-group-icon"])
           %span.home-toolbar-button-text
             = t("homepage.filters.#{view_type}_button")
