--- a/app/assets/stylesheets/index/main.css
+++ b/app/assets/stylesheets/index/main.css
@@ -23,14 +23,17 @@ body {
     font-family: arile;
 }
 #header {
-    padding: 35px 0 0;
-    margin: 10px 0 10px;
+    padding: 0 0 0;
+    margin: 0 0 10px;
+}
+#header .navbar {
+    margin: 0;
 }
 .header-top {
     background-color: #fff;
     border-bottom: 1px solid #ccc;
     width: 100%;
-    position: absolute;
+    overflow: hidden;
     top: 0;
     left: 0;
     padding: 6px 0 0;
